--- a/pokedex/src/Pokecard.css
+++ b/pokedex/src/Pokecard.css
@@ -6,6 +6,8 @@
     margin: 5px 20px;
     font-family: Haettenschweiler;
     border: 1px solid #600080;
+    animation-duration: 2s;
+    animation-name: bounceIn;
     
 }
 
@@ -37,3 +39,17 @@ h4{
 p{
     margin: 5px 0;
 }
+
+@keyframes bounceIn {
+    0% {
+      transform: scale(0.1);
+      opacity: 0;
+    }
+    60% {
+      transform: scale(0.6);
+      opacity: 1;
+    }
+    100% {
+      transform: scale(1);
+    }
+  }
